crud article fonctionnel (pender à mettre role_editor quand les comptes fonctionneront)

--- a/templates/article/index.html.twig
+++ b/templates/article/index.html.twig
@@ -20,10 +20,10 @@
                 <td>{{ article.name }}</td>
                 <td>{{ article.price }}</td>
                 <td>
-                    {#                    <a href="{{ path('article_show', {'id': article.id}) }}" class="btn btn-info">Détails</a>
-                       <a href="{{ path('article_edit', {'id': article.id}) }}" class="btn btn-warning">Modifier</a>
-                        {{ include('article/_delete_form.html.twig') }}
-                    #}
+                    <a href="{{ path('article_show', {'id': article.id}) }}" class="btn btn-info">Détails</a>
+                    <a href="{{ path('article_edit', {'id': article.id}) }}" class="btn btn-warning">Modifier</a>
+                    {{ include('article/_delete.html.twig') }}
+
                 </td>
             </tr>
         {% else %}
