crud category commencé

--- a/templates/article/show.html.twig
+++ b/templates/article/show.html.twig
@@ -15,6 +15,10 @@
             <th>Prix de l'article</th>
             <td>{{ article.price }}</td>
         </tr>
+        <tr>
+            <th>Catégorie</th>
+            <td>{{ article.category}}</td>
+        </tr>
         </tbody>
     </table>
 
