--- a/templates/article/_form.html.twig
+++ b/templates/article/_form.html.twig
@@ -5,6 +5,9 @@
 <div class="row">
     <div class="col-md-10">{{ form_row(form.price) }}</div>
 </div>
+<div class="row">
+    <div class="col-md-10">{{ form_row(form.category) }}</div>
+</div>
 <div class="d-flex justify-content-start mt-3">
     <button class="btn btn-success me-md-2"><i class="fa fa-check"></i> {{ button_label|default('Sauvegarder') }}</button>
     <a href="{{ path('article_index') }}"><button type="button" class="btn btn-secondary me-md-2"><i class="fa fa-reply"></i> Retour</button></a>
