--- a/templates/article/index.html.twig
+++ b/templates/article/index.html.twig
@@ -11,7 +11,8 @@
         <tr>
             <th>Name</th>
             <th>Price</th>
-            <th>actions</th>
+            <th>Catégorie</th>
+            <th>Actions</th>
         </tr>
         </thead>
         <tbody>
@@ -19,6 +20,7 @@
             <tr>
                 <td>{{ article.name }}</td>
                 <td>{{ article.price }}</td>
+                <td>{{ article.category }}</td>
                 <td>
                     <a href="{{ path('article_show', {'id': article.id}) }}" class="btn btn-info">Détails</a>
                     <a href="{{ path('article_edit', {'id': article.id}) }}" class="btn btn-warning">Modifier</a>
