crud category fait mais a quelques défauts

--- a/templates/article/index.html.twig
+++ b/templates/article/index.html.twig
@@ -9,8 +9,8 @@
     <table class="table">
         <thead>
         <tr>
-            <th>Name</th>
-            <th>Price</th>
+            <th>Nom</th>
+            <th>Prix</th>
             <th>Catégorie</th>
             <th>Actions</th>
         </tr>
