--- a/templates/category/new.html.twig
+++ b/templates/category/new.html.twig
@@ -3,9 +3,8 @@
 {% block title %}New Category{% endblock %}
 
 {% block body %}
-    <h1>Create new Category</h1>
+    <h1>Créer une catégorie</h1>
 
-    {{ include('category/_form.html.twig') }}
+    {{ include('category/_form.html.twig', {'button_label': 'Enregistrer'}) }}
 
-    <a href="{{ path('app_category_index') }}">back to list</a>
 {% endblock %}
