--- a/templates/category/show.html.twig
+++ b/templates/category/show.html.twig
@@ -8,11 +8,11 @@
     <table class="table">
         <tbody>
             <tr>
-                <th>Id</th>
+                <th>Id de la catégorie</th>
                 <td>{{ category.id }}</td>
             </tr>
             <tr>
-                <th>Title</th>
+                <th>Nom</th>
                 <td>{{ category.title }}</td>
             </tr>
             <tr>
@@ -22,9 +22,11 @@
         </tbody>
     </table>
 
-    <a href="{{ path('app_category_index') }}">back to list</a>
-
-    <a href="{{ path('app_category_edit', {'id': category.id}) }}">edit</a>
-
-    {{ include('category/_delete_form.html.twig') }}
+    <div class="d-flex justify-content-start mt-3">
+        <a href="{{ path('category_index') }}"><button type="button" class="btn btn-secondary me-md-2"><i class="fa fa-reply"></i> Retour</button></a>
+        {#        Optionnel : boutons Modifier et Supprimer#}
+        <a href="{{ path('category_edit', {'id': article.id}) }}"><button type="button" class="btn btn-warning me-md-2"><i class="fa fa-reply"></i> Modifier</button></a>
+        {{ include('category/_delete.html.twig') }}
+    </div>
+    {{ include('category/_delete.html.twig') }}
 {% endblock %}
