css ajouté, erreur restantes: chemin du bouton liste catégories, afficher catégories dans liste articles, autres petites améliorations à faire

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -8,6 +8,7 @@
         <link href="//bootswatch.com/5/vapor/bootstrap.css" rel="stylesheet">
         <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
         <link rel="shortcut icon" href="images/logostjo.png">
+        <link rel="stylesheet" href="{{ asset('css/style-supplementary.css') }}">
     {% endblock %}
 </head>
 <body class="d-flex flex-column min-vh-100">
