--- a/templates/partials/header.html.twig
+++ b/templates/partials/header.html.twig
@@ -53,7 +53,7 @@
                         <i class="fa fa-inbox"></i> Catégories
                     </a>
                     <ul class="dropdown-menu dropdown-menu-end">
-                        <li><a href="../category/index.html.twig"
+                        <li><a href="../category"
                                class="dropdown-item"><i class="fa fa-th-large"></i> Liste des catégories</a></li>
                         {% if is_granted('ROLE_EDITOR') %}
                             <li>
