--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{% block title %}Ongi etorri{% endblock %}</title>
     {% block stylesheets %}
-        <link href="//bootswatch.com/5/vapor/bootstrap.css" rel="stylesheet">
+        <link href="//bootswatch.com/5/pulse/bootstrap.css" rel="stylesheet">
         <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
         <link rel="shortcut icon" href="images/logostjo.png">
         <link rel="stylesheet" href="{{ asset('css/style-supplementary.css') }}">
