--- a/templates/category/index.html.twig
+++ b/templates/category/index.html.twig
@@ -20,14 +20,14 @@
                 <td class="name-cell">{{ category.title }}</td>
                 <td class="description-cell">{{ category.description }}</td>
                 <td class="action-cell">
-                    <a href="{{ path('category_show', {'id': category.id}) }}" class="btn btn-info btn-sm">Détails</a>
-                    <a href="{{ path('category_edit', {'id': category.id}) }}" class="btn btn-warning btn-sm">Modifier</a>
+                    <a href="{{ path('category_show', {'id': category.id}) }}" class="btn btn-info btn-sm"></i>Détails</a>
+                    <a href="{{ path('category_edit', {'id': category.id}) }}" class="btn btn-warning btn-sm"></i>Modifier</a>
                     {{ include('category/_delete.html.twig') }}
                 </td>
             </tr>
         {% else %}
             <tr>
-                <td colspan="3">Aucune catégorie n'a été trouvée</td>
+                <td colspan="4">Aucune catégorie n'a été trouvée</td>
             </tr>
         {% endfor %}
         </tbody>
