crud user presque fait, attention copie de la correction ça marchait pas

--- a/templates/category/new.html.twig
+++ b/templates/category/new.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Category{% endblock %}
+{% block title %}Créer un utilisateur{% endblock %}
 
 {% block body %}
     <h1>Créer une catégorie</h1>
