--- a/templates/partials/header.html.twig
+++ b/templates/partials/header.html.twig
@@ -69,13 +69,13 @@
                     </ul>
                 </li>
 
-                {% if is_granted('ROLE_ADMIN') %}
+               {#  {% if is_granted('ROLE_ADMIN') %}#}
                     <li class="nav-item">
                         <a href="#"
                            class="nav-link">
                             <i class="fa fa-cog"></i> Administration</a>
                     </li>
-                {% endif %}
+                {#  {% endif %}#}
             </ul>
 
             <!-- Recherche + menu utilisateur -->
