--- a/templates/user/_form.html.twig
+++ b/templates/user/_form.html.twig
@@ -1,4 +1,23 @@
 {{ form_start(form) }}
-    {{ form_widget(form) }}
-    <button class="btn">{{ button_label|default('Save') }}</button>
+<div class="row mt-5">
+    <div class="col">{{ form_row(form.firstname) }}</div>
+    <div class="col">{{ form_row(form.lastname) }}</div>
+    <div class="col">{{ form_row(form.email) }}</div>
+</div>
+<div class="row mb-3 mt-5">
+    <div class="col">{{ form_row(form.password) }}</div>
+    <div class="col">{{ form_row(form.confirm_password) }}</div>
+{#  {% if is_granted('ROLE_ADMIN') %}#}
+        <div class="col">{{ form_row(form.roles) }}</div>
+{#  {% endif %}#}
+</div>
+
+<div class="d-flex justify-content-start mt-3">
+{#  {% if is_granted('ROLE_ADMIN') %}#}
+        <a href="{{ path('user_index') }}"><button type="button" class="btn btn-secondary me-md-2"><i class="fa fa-reply"></i> Retour</button></a>
+    {#  {% else %}
+        <a href="{{ path('article_index') }}"><button type="button" class="btn btn-secondary me-md-2"><i class="fa fa-reply"></i> Retour</button></a>
+    {% endif %}
+    #}<button class="btn btn-success me-md-2"><i class="fa fa-check"></i> {{ button_label|default('Sauvegarder') }}</button>
+</div>
 {{ form_end(form) }}
